# BioSuite-Ultra

./: .dockerignore  .gitattributes  .gitignore  ANALYSIS_FA.html  API_GUIDE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  MANIFEST.in  README.md  ROADMAP_FA.html  bioplatter.spec  bioplatter_config.json  biosuite_config.json  biotools.json  docker-compose.yml  errors.txt  publish.ps1  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
bioplatter/cli/: menu.py
bioplatter/core/: __init__.py  alignment.py  expression.py  ngs.py  phylogeny.py  sequence.py  utils.py
bioplatter/gui/: main_window.py
bioplatter/plotting/: __init__.py  biological_plots.py  math_plots.py  specialized_plots.py
biosuite/: __init__.py
biosuite/api/: __init__.py  auth.py  security.py  server.py
biosuite/cli/: menu.py
biosuite/core/: alignment.py  assembly.py  bayesian_phylogeny.py  bio_ml.py  blast.py  cloning.py  codon_usage.py  crispr.py  databases.py  docking.py  enrichment.py  epigenomics.py  epitope.py  expression.py  file_formats.py  go_browser.py  gwas.py  log.py  md_simulation.py  metabolism.py  metabolomics.py  metagenomics.py  ml_phylogeny.py  msa.py  ngs.py  orf_finder.py  parallel.py  pathway_viz.py  peak_calling.py  phylogeny.py  plugin.py  popgen.py  provenance.py  quantification.py  read_aligner.py  sequence.py  single_cell.py  structure.py  structure_prediction.py  survival.py  (+4 more)
biosuite/gui/: __init__.py  dialogs.py  main_window.py  themes.py
biosuite/notebook/: __init__.py
biosuite/plotting/: __init__.py  biological_plots.py  conservation_plots.py  genome_browser.py  interactive_plots.py  math_plots.py  network_plots.py  plasmid_map.py  plot_api.py  sequence_viewer.py  (+3 more)
docs/: BioSuite_Complete_Documentation.html  ROADMAP_FA.html  conf.py  getting_started.rst  index.rst  papers_guide.html
examples/: 01_sequence_analysis.ipynb  02_alignment_and_phylogeny.ipynb  03_pipeline_and_batch.ipynb  04_visualization_gallery.ipynb  05_gwas_and_epitope.ipynb  tutorial_01_sequence_analysis.py  tutorial_02_alignment.py  tutorial_03_differential_expression.py  tutorial_04_single_cell.py  tutorial_05_crispr.py  tutorial_06_metagenomics.py  tutorial_07_machine_learning.py  tutorial_08_visualization.py
legacy/: BioPlot.py
tests/: t1.py  test_alignment.py  test_api.py  test_assembly_trimming.py  test_blast.py  test_cli.py  test_cloning_and_viewer.py  test_comprehensive.py  test_crispr_popgen_epitope.py  test_databases.py  test_databases_and_tools.py  test_enrichment_gwas.py  test_expression.py  test_file_formats.py  test_gui_all_modules.py  test_interactive_plots.py  test_msa.py  test_notebook.py  test_orf_finder.py  test_phase3_integration.py  test_phase3_plotting.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phylogeny.py  test_plotting_uncovered.py  test_sequence.py  test_shared_utilities.py  test_uncovered_modules.py  test_untested_modules.py  test_utils_shared.py
(+18 files in other folders)
