[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biosuite-ultra"
version = "4.2.3"
description = "BioSuite Ultra - Comprehensive open-source bioinformatics platform with 47 analysis modules, parallel processing, molecular cloning, plasmid maps, and virtual gel electrophoresis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Sahand Touri"},
]
keywords = [
    "bioinformatics", "genomics", "proteomics", "transcriptomics",
    "sequence-analysis", "ngs", "machine-learning", "molecular-cloning",
    "plasmid-maps", "virtual-gel", "restriction-enzymes", "parallel-processing",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "customtkinter>=5.2",
    "tqdm>=4.65",
    "biopython>=1.81",
    "networkx>=3.0",
    "plotly>=5.0",
]

[project.optional-dependencies]
bio = [
    "goatools>=1.3",
    "gseapy>=1.0",
    "cutadapt>=4.0",
    "scanpy>=1.9",
    "anndata>=0.9",
    "scikit-bio>=0.5",
    "biotite>=0.37",
    "ete3>=3.1",
    "cobra>=3.0",
    "shap>=0.42",
    "umap-learn>=0.5",
    "statsmodels>=0.14",
]
cloning = [
    # Core deps (numpy, matplotlib, biopython) already in main dependencies
    # This extra exists for backward compatibility
]
api = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "python-jose[cryptography]>=3.3",
    "slowapi>=0.1.9"
]
notebook = [
    "ipython>=8.0",
    "ipywidgets>=8.0",
]
parallel = [
    # No additional dependencies needed - uses Python stdlib concurrent.futures
]
full = [
    "biosuite-ultra[bio]",
    "biosuite-ultra[api]",
    "biosuite-ultra[notebook]",
    "biosuite-ultra[parallel]",
    "pysam>=0.21",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
]

[project.scripts]
biosuite = "biosuite.cli.menu:main_cli"
biosuite-gui = "biosuite.cli.menu:main_cli_gui"

[project.urls]
Homepage = "https://github.com/sahandtkod-byte/BioSuite-Ultra"
Documentation = "https://biosuite.readthedocs.io"
Repository = "https://github.com/sahandtkod-byte/BioSuite-Ultra"
Issues = "https://github.com/sahandtkod-byte/BioSuite-Ultra/issues"

[tool.setuptools.packages.find]
include = ["biosuite*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
